# kbkit

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: conf.py  examples.rst  index.rst  kbkit.kb.kb_thermo.rst  kbkit.kb.kbi.rst  kbkit.kb.rdf.rst  kbkit.kb.rst  kbkit.kb.system_set.rst  kbkit.kb_pipeline.rst  kbkit.plotter.rst  kbkit.properties.energy_reader.rst  kbkit.properties.rst  kbkit.properties.system_properties.rst  kbkit.properties.topology.rst  kbkit.system_properties.rst  kbkit.unit_registry.rst  kbkit.utils.rst  make_file_tree.py
docs/auto_examples/: index.rst
docs/examples/: 01-run-kbkit.ipynb  kbkit_example.ipynb
examples/: GALLERY_HEADER.rst
examples/test_data/pure_components/DMDBP_400/: DMDBP_400.top  potential.xvg  temperature.xvg  volume.xvg
examples/test_data/pure_components/NDODE_400/: potential.xvg  temperature.xvg  volume.xvg
examples/test_data/systems/sys_1_400/: sys_1_400.top  temperature.xvg
examples/test_data/systems/sys_2_400/: pressure.xvg  temperature.xvg  volume.xvg
examples/test_data/systems/sys_3_400/: potential.xvg  pressure.xvg
examples/test_data/systems/sys_4_400/: pressure.xvg  volume.xvg
examples/test_data/systems/sys_5_400/: sys_5_400.top  temperature.xvg
src/kbkit/: __init__.py  kb_pipeline.py  plotter.py  plt_format.mplstyle  system_properties.py  unit_registry.py  utils.py
src/kbkit/kb/: __init__.py  kb_thermo.py  kbi.py  rdf.py  system_set.py
src/kbkit/properties/: __init__.py  energy_reader.py  system_properties.py  topology.py
(+64 files in other folders)
