[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbkit"
version = "0.1"
authors = [{name = "Allison Peroutka"},]
description = "Python-based toolkit for applying Kirkwood-Buff theory to molecular dynamics simulations"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/aperoutka/kbkit"
